[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot"
version = "0.1.0"
description = "Le Robot experiments"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Jack Bookey" }
]
keywords = ["robotics", "experiments"]
dependencies = []

[project.optional-dependencies]
feetech = [] # add the extra dependencies needed for the Feetech setup here

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]
